Fix typos in curl-sse.org

--- a/curl-sse.org
+++ b/curl-sse.org
@@ -1,5 +1,5 @@
 * post
-** users/login 
+** users/login
 
 #+name: get-admin-token
 #+begin_src shell
@@ -16,15 +16,15 @@
 #+begin_src shell
      AUTH_TOKEN_USER=$(curl -L -X POST 'http://localhost:3000/users/login' \
                  -H 'Content-Type: application/json' \
-                 --data '{"username": "jon@gmail.com", "password": "test"}' | jq -r ".token")
+                 --data '{"username": "jon@gmail.com", "password": "qwerty"}' | jq -r ".token")
      echo $AUTH_TOKEN_USER;
 #+end_src
 
 ** users/register
-#+BEGIN_SRC shell :results raw 
+#+BEGIN_SRC shell :results raw
   curl --location --request POST 'http://localhost:3000/users/register' \
        -H 'Content-Type: application/json' \
-       --data '{"username": "skuli@gmail.com", "password": "qwerty"}' 
+       --data '{"username": "jon@gmail.com", "password": "qwerty"}'
 #+END_SRC
 
 #+RESULTS:
@@ -37,7 +37,7 @@
   curl -L -X POST "http://localhost:3000/events" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
        -H "Content-Type: application/json" \
-       --data '{"id": "1", "name": "Aðalfundur fyrir forritara", "description": "Allir að mæta!"}' 
+       --data '{"id": "1", "name": "Aðalfundur fyrir forritara", "description": "Allir að mæta!"}'
 #+END_SRC
 
 #+RESULTS:
@@ -53,18 +53,18 @@
 #+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token
    curl -L -X GET "http://localhost:3000/users/"\
         -H "Authorization: Bearer $AUTH_TOKEN"\
-        -H "Content-Type: application/json" 
+        -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
 | username":"jon@gmail.com | username":"unnur@gmail.com |
 
-** users/id
+** users/:id
 
 #+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token
   curl -L -X GET "http://localhost:3000/users/1" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
-       -H "Content-Type: application/json" 
+       -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
@@ -74,7 +74,7 @@
 #+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token
   curl --location --request GET "http://localhost:3000/users/me" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
-       -H "Content-Type: application/json" 
+       -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
@@ -84,7 +84,7 @@
 #+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token
   curl --location --request GET "http://localhost:3000/events/1" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
-       -H "Content-Type: application/json" 
+       -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
@@ -92,19 +92,19 @@
 
 ** events
 
-#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw 
+#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw
   curl --location --request GET "Http://localhost:3000/events/" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
-       -H "Content-Type: application/json" 
+       -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
 [{"id":1,"name":"Forritarahittingur í febrúar","slug":"forritarahittingur-i-februar","description":"Forritarar hittast í febrúar og forrita saman eitthvað frábært.","created":"2022-03-01T00:00:00.000Z","updated":"2022-03-01T00:00:00.000Z"},{"id":2,"name":"Hönnuðahittingur í mars","slug":"honnudahittingur-i-mars","description":"Spennandi hittingur hönnuða í Hönnunarmars.","created":"2022-03-01T00:00:00.000Z","updated":"2022-03-01T00:00:00.000Z"},{"id":4,"name":"Aðalfundur fyrir forritara","slug":"adalfundur-fyrir-forritara","description":"Allir að mæta!","created":"2022-03-01T00:00:00.000Z","updated":"2022-03-01T00:00:00.000Z"},{"id":5,"name":"Aðalfundur fyrir forritara","slug":"adalfundur-fyrir-forritara","description":"Allir að mæta!","created":"2022-03-02T00:00:00.000Z","updated":"2022-03-02T00:00:00.000Z"}]
 
 * patch
+** events/:id
 
-
-#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw 
+#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw
   curl -X PATCH "http://localhost:3000/events/2" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
        -H "Content-Type: application/json" \
@@ -116,14 +116,13 @@
 {"update":{"id":6,"userid":2,"name":"Aðalfundur fyrir forritara","slug":"adalfundur-fyrir-forritara","description":"Ókeypis bjór!!"}}
 
 * delete
+** events/:id
 
-#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw 
+#+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token :results raw
   curl -X DELETE "http://localhost:3000/events/2" \
        -H "Authorization: Bearer $AUTH_TOKEN" \
-       -H "Content-Type: application/json" 
+       -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
 : {"error":"Ekki tókst að eiða viðburðinn"}
-
-
