--- a/curl-sse.org
+++ b/curl-sse.org
@@ -68,7 +68,7 @@
 #+END_SRC
 
 #+RESULTS:
-: error":"Not found
+| id | admin | $2a$11$pgj3.zySyFOvIQEpD7W6Aund1Tw.BFarXxgLJxLbrzIv/4Nteisii | admin:true} |
 
 ** users/me
 #+BEGIN_SRC shell :var AUTH_TOKEN=get-admin-token
