--- a/curl-sse.org
+++ b/curl-sse.org
@@ -177,11 +177,14 @@ null
 
 ** cart/:cartid/line/:id
 #+BEGIN_SRC shell :var AUTH_TOKEN_ADMIN=get-admin-token :results raw
-  curl -L -X GET "Http://localhost:3000/cart/c75a4f3c-083d-4805-b6ce-b990d044db47/line/2" \
+  curl -L -X GET "Http://localhost:3000/cart/c75a4f3c-083d-4805-b6ce-b990d044db47/line/1" \
        -H "Content-Type: application/json"
 #+END_SRC
 
 #+RESULTS:
+[{"id":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":1,"description":"Tómatsósa, óreganó, hvítlauksolía"}]
+[{"basketid":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":1,"description":"Tómatsósa, óreganó, hvítlauksolía"}]
+[{"basketid":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":2,"description":"Tómatsósa, mozzarella, basil"}]
 [{"id":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":1,"description":"Tómatsósa, óreganó, hvítlauksolía"}]
 [{"id":3,"productid":3,"basketid":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":1}]
 [{"id":2,"productid":2,"basketid":"c75a4f3c-083d-4805-b6ce-b990d044db47","amount":2}]
@@ -202,6 +205,16 @@ null
 {"error":"Not found"}
 {"error":"Ekki tókst að uppfæru viðburðinn"}
 {"update":{"id":6,"userid":2,"name":"Aðalfundur fyrir forritara","slug":"adalfundur-fyrir-forritara","description":"Ókeypis bjór!!"}}
+
+** categories/:cartid/line/:id
+
+#+BEGIN_SRC shell :var AUTH_TOKEN_ADMIN=get-admin-token :results raw
+  curl -X PATCH "http://localhost:3000/cart/c75a4f3c-083d-4805-b6ce-b990d044db47/line/1" \
+       -H "Content-Type: application/json" \
+       -d '{ "amount": 5}'
+#+END_SRC
+
+#+RESULTS:
 
 * delete
 ** categories/:id
@@ -226,3 +239,14 @@ null
 #+END_SRC
 
 #+RESULTS:
+
+** cart/:cartid/line/:id
+#+BEGIN_SRC shell :var AUTH_TOKEN_ADMIN=get-admin-token :results raw
+  curl -X DELETE "Http://localhost:3000/cart/c75a4f3c-083d-4805-b6ce-b990d044db47/line/2" \
+       -H "Content-Type: application/json"
+#+END_SRC
+
+#+RESULTS:
+{"command":"DELETE","rowCount":1,"oid":null,"rows":[],"fields":[],"_types":{"_types":{"arrayParser":{},"builtins":{"BOOL":16,"BYTEA":17,"CHAR":18,"INT8":20,"INT2":21,"INT4":23,"REGPROC":24,"TEXT":25,"OID":26,"TID":27,"XID":28,"CID":29,"JSON":114,"XML":142,"PG_NODE_TREE":194,"SMGR":210,"PATH":602,"POLYGON":604,"CIDR":650,"FLOAT4":700,"FLOAT8":701,"ABSTIME":702,"RELTIME":703,"TINTERVAL":704,"CIRCLE":718,"MACADDR8":774,"MONEY":790,"MACADDR":829,"INET":869,"ACLITEM":1033,"BPCHAR":1042,"VARCHAR":1043,"DATE":1082,"TIME":1083,"TIMESTAMP":1114,"TIMESTAMPTZ":1184,"INTERVAL":1186,"TIMETZ":1266,"BIT":1560,"VARBIT":1562,"NUMERIC":1700,"REFCURSOR":1790,"REGPROCEDURE":2202,"REGOPER":2203,"REGOPERATOR":2204,"REGCLASS":2205,"REGTYPE":2206,"UUID":2950,"TXID_SNAPSHOT":2970,"PG_LSN":3220,"PG_NDISTINCT":3361,"PG_DEPENDENCIES":3402,"TSVECTOR":3614,"TSQUERY":3615,"GTSVECTOR":3642,"REGCONFIG":3734,"REGDICTIONARY":3769,"JSONB":3802,"REGNAMESPACE":4089,"REGROLE":4096}},"text":{},"binary":{}},"RowCtor":null,"rowAsArray":false}
+{"command":"DELETE","rowCount":1,"oid":null,"rows":[],"fields":[],"_types":{"_types":{"arrayParser":{},"builtins":{"BOOL":16,"BYTEA":17,"CHAR":18,"INT8":20,"INT2":21,"INT4":23,"REGPROC":24,"TEXT":25,"OID":26,"TID":27,"XID":28,"CID":29,"JSON":114,"XML":142,"PG_NODE_TREE":194,"SMGR":210,"PATH":602,"POLYGON":604,"CIDR":650,"FLOAT4":700,"FLOAT8":701,"ABSTIME":702,"RELTIME":703,"TINTERVAL":704,"CIRCLE":718,"MACADDR8":774,"MONEY":790,"MACADDR":829,"INET":869,"ACLITEM":1033,"BPCHAR":1042,"VARCHAR":1043,"DATE":1082,"TIME":1083,"TIMESTAMP":1114,"TIMESTAMPTZ":1184,"INTERVAL":1186,"TIMETZ":1266,"BIT":1560,"VARBIT":1562,"NUMERIC":1700,"REFCURSOR":1790,"REGPROCEDURE":2202,"REGOPER":2203,"REGOPERATOR":2204,"REGCLASS":2205,"REGTYPE":2206,"UUID":2950,"TXID_SNAPSHOT":2970,"PG_LSN":3220,"PG_NDISTINCT":3361,"PG_DEPENDENCIES":3402,"TSVECTOR":3614,"TSQUERY":3615,"GTSVECTOR":3642,"REGCONFIG":3734,"REGDICTIONARY":3769,"JSONB":3802,"REGNAMESPACE":4089,"REGROLE":4096}},"text":{},"binary":{}},"RowCtor":null,"rowAsArray":false}
+null
